# rust_todo

./: Cargo.toml  README.md
assets/: yaml_todo_manager.desktop
src/: main.rs  todo_list.rs
